--- a/src/App.scss
+++ b/src/App.scss
@@ -1,13 +1,49 @@
-.step,
-.result {
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 3px;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+.box {
     margin: 15px;
     border: 1px solid #000;
     padding: 15px;
     width: 450px;
     height: 300px;
-}
-
-.step {
     table {
         border: 1px solid #000;
     }
@@ -19,7 +55,7 @@ input {
 
 h5,
 p {
-    margin: 0px;
+    margin: 0;
 }
 
 
@@ -28,28 +64,6 @@ fieldset {
     max-width: 800px;
 }
 
-.dNone {
-    display: none;
-}
-
-.view {
-    display: block;
-}
-
-.step,
-.result {
-    display: none
-}
-
-.view,
-    {
-    &.result {
-        display: block;
-    }
-    &.step {
-        display: block;
-    }
-}
 
 .nextStep {
     float: right;
