--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,82 @@
+@mixin c-flex-type($type) {
+    @if $type=="row" {
+        flex-direction: row;
+    }
+    @else if $type=="column" {
+        flex-direction: column;
+    }
+    @else if $type=="row-r" {
+        flex-direction: row-reverse;
+    }
+    @else if $type=="column-r" {
+        flex-direction: column-reverse;
+    }
+
+}
+@mixin c-flex-wrap($wrap) {
+    @if $wrap=="nowrap" {
+        flex-wrap: nowrap;
+    }
+    @else if $wrap=="wrap" {
+        flex-wrap: wrap
+    }
+    @else if $wrap=="wrap-r" {
+        flex-wrap: wrap-reverse
+    }
+}
+@mixin c-flex-justify($justify) {
+    @if $justify=="start" {
+        justify-content: flex-start;
+    }
+    @else if $justify=="end" {
+        justify-content: flex-end;
+    }
+    @else if $justify=="center" {
+        justify-content: center;
+    }
+    @else if $justify=="between" {
+        justify-content: space-between;
+    }
+    @else if $justify=="around" {
+        justify-content: space-around;
+    }
+}
+@mixin c-flex-align($align-i) {
+    @if $align-i=="start" {
+        align-items: flex-start;
+    }
+    @else if $align-i=="end" {
+        align-items: flex-end;
+    }
+    @else if $align-i=="center" {
+        align-items: center;
+    }
+    @else if $align-i=="baseline" {
+        align-items: baseline;
+    }
+    @else if $align-i=="stretch" {
+        align-items: stretch;
+    }
+}
+@mixin c-flex($type: 0, $wrap: 0, $justify: 0, $align-i: 0) {
+    display: flex;
+    @if $type !=0 {
+        @include c-flex-type($type)
+    }
+    @if $wrap !=0 {
+        @include c-flex-wrap($wrap)
+    }
+    @if $justify !=0 {
+        @include c-flex-justify($justify)
+    }
+    @if $align-i !=0 {
+        @include c-flex-align($align-i)
+    }
+
+
+}
+
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -46,6 +125,9 @@ tr, th, td{
 	vertical-align: baseline;
 }
 
+.step4__btn{
+	@include c-flex("row", 0, "between");
+}
 
 .box {
     margin: 15px;
@@ -76,4 +158,16 @@ fieldset {
 
 .nextStep {
     float: right;
+}
+
+
+.step4{
+	&__tabele{
+		&--td{
+			width: 33%
+		}
+		&--element{
+			width: 90%
+		}
+	}
 }
